--- a/Bootstrap_small_project/ipad.html
+++ b/Bootstrap_small_project/ipad.html
@@ -16,12 +16,11 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-between">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-between fixed-top">
 
 
 
         <ul class="navbar-nav ">
-            <a class="navbar-brand " href="main.html">Logo</a>
             <li class="nav-item ">
                 <a class="nav-link" href="mac.html">Mac</a>
             </li>
@@ -53,14 +52,61 @@
         </ul>
         <ul class="navbar-nav ">
             <li class="nav-item ">
-                    <a class="nav-link" href="notice.html">고객지원</a>
+                <a class="nav-link" href="notice.html">고객지원</a>
             </li>
         </ul>
 
         <ul class="navbar-nav ">
             <li class="nav-item ">
-                <a class="nav-link" href="login.html">login</a>
+                <div data-toggle="modal" data-target="#myModal5">
+                    <a class="nav-link">login</a></div>
+                <div class="modal fade" id="myModal5">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title">로그인</h4>
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            </div>
+                            <form action="/login" method="GET">
+                                <div>
+                                    <div class="form-group col-lg-8  ">
+                                        <label for="email">Email:</label>
+                                        <input type="email" name="login_email" class="form-control" id="email"
+                                            placeholder="Enter emaill">
+                                    </div>
+
+                                    <div class="form-group col-lg-8 ">
+                                        <label for="pwd">Password:</label>
+                                        <input type="password" name="login_password" class="form-control"
+                                            placeholder="Enter password">
+                                    </div>
+
+                                    <div class="form-group form-inline col-lg-8">
+                                        <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input type="checkbox" class="form-check-input"
+                                                    name="login_checkbox">Remember me
+                                            </label>
+                                        </div>
+                                    </div>
+
+
+                                    <button type="submit" class="btn btn-outline-secondary m-3">Submit</button>
+
+                                </div>
+
+                            </form>
+                            <div class="modal-body">
+                                정말로 로그인을 하시겠습니까?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" data-dismiss="modal">예</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </li>
+
 
 
 
@@ -84,6 +130,7 @@
                     </div>
                 </div>
             </li>
+
         </ul>
 
     </nav>
@@ -97,20 +144,22 @@
         </div>
     </div>
 
-    
-    <div class="container border text-center">
+
+    <div class="container border text-center mb-5 mt-5">
+        <h1>iPad</h1>
         <div class="row bg-light">
             <div class="col-lg border">
 
                 <div class=" bg-light rounded text-center">
                     <div>
-                        <img src="../sunghoimg/pad1.PNG" style="width: 100%" height="500px" alt="1" class="rounded-top mt-4">
+                        <img src="../sunghoimg/pad1.PNG" style="width: 90%" height="500px" alt="1"
+                            class="rounded-top mt-4">
 
                     </div>
 
 
-<h2>iPad Pro</h2>
-                    <div class="border bg-white rounded-bottom p-3 text-left">
+                    <h2>iPad Pro</h2>
+                    <div class="border bg-white rounded-bottom p-3 text-left mb-3">
                         <small>The most advanced iPad ever.
                         </small>
 
@@ -123,7 +172,8 @@
 
                 <div class=" bg-light rounded text-center">
                     <div>
-                        <img src="../sunghoimg/pad2.PNG" style="width: 100%" height="500px" alt="1" class="rounded-top mt-4">
+                        <img src="../sunghoimg/pad2.PNG" style="width: 90%" height="500px" alt="1"
+                            class="rounded-top mt-4">
 
                     </div>
 
@@ -148,13 +198,14 @@
 
                 <div class=" bg-light rounded text-center">
                     <div>
-                        <img src="../sunghoimg/pad3.PNG" style="width: 100%" height="500px" alt="1" class="rounded-top mt-4">
+                        <img src="../sunghoimg/pad3.PNG" style="width: 90%" height="500px" alt="1"
+                            class="rounded-top mt-4">
 
                     </div>
 
                     <h2>iPad</h2>
 
-                    <div class="border bg-white rounded-bottom p-3 text-left">
+                    <div class="border bg-white rounded-bottom p-3 text-left mb-3">
                         <small>Our most popular iPad.
                         </small>
 
@@ -166,7 +217,8 @@
 
                 <div class=" bg-light rounded text-center">
                     <div>
-                        <img src="../sunghoimg/pad4.PNG" style="width: 100%" height="500px" alt="1" class="rounded-top mt-4">
+                        <img src="../sunghoimg/pad4.PNG" style="width: 90%" height="500px" alt="1"
+                            class="rounded-top mt-4">
 
                     </div>
 
