--- a/Bootstrap_small_project/mac.html
+++ b/Bootstrap_small_project/mac.html
@@ -16,12 +16,11 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-between">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-between fixed-top">
 
 
 
         <ul class="navbar-nav ">
-            <a class="navbar-brand " href="main.html">Logo</a>
             <li class="nav-item ">
                 <a class="nav-link" href="mac.html">Mac</a>
             </li>
@@ -53,14 +52,61 @@
         </ul>
         <ul class="navbar-nav ">
             <li class="nav-item ">
-                    <a class="nav-link" href="notice.html">고객지원</a>
+                <a class="nav-link" href="notice.html">고객지원</a>
             </li>
         </ul>
 
         <ul class="navbar-nav ">
             <li class="nav-item ">
-                <a class="nav-link" href="login.html">login</a>
+                <div data-toggle="modal" data-target="#myModal5">
+                    <a class="nav-link">login</a></div>
+                <div class="modal fade" id="myModal5">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title">로그인</h4>
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            </div>
+                            <form action="/login" method="GET">
+                                <div>
+                                    <div class="form-group col-lg-8  ">
+                                        <label for="email">Email:</label>
+                                        <input type="email" name="login_email" class="form-control" id="email"
+                                            placeholder="Enter emaill">
+                                    </div>
+
+                                    <div class="form-group col-lg-8 ">
+                                        <label for="pwd">Password:</label>
+                                        <input type="password" name="login_password" class="form-control"
+                                            placeholder="Enter password">
+                                    </div>
+
+                                    <div class="form-group form-inline col-lg-8">
+                                        <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input type="checkbox" class="form-check-input"
+                                                    name="login_checkbox">Remember me
+                                            </label>
+                                        </div>
+                                    </div>
+
+
+                                    <button type="submit" class="btn btn-outline-secondary m-3">Submit</button>
+
+                                </div>
+
+                            </form>
+                            <div class="modal-body">
+                                정말로 로그인을 하시겠습니까?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" data-dismiss="modal">예</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </li>
+
 
 
 
@@ -84,6 +130,7 @@
                     </div>
                 </div>
             </li>
+
         </ul>
 
     </nav>
@@ -91,27 +138,37 @@
     <div class="container">
         <div class="text-center">
             <h1>
-                ipad
+                Mac
             </h1>
 
         </div>
     </div>
 
-    
-    <div class="container border text-center">
+
+    <div class="container border text-center mb-5 mt-5">
+        <h1>Mac</h1>
         <div class="row bg-light">
             <div class="col-lg border">
 
                 <div class=" bg-light rounded text-center">
                     <div>
-                        <img src="../sunghoimg/pad1.PNG" style="width: 100%" height="500px" alt="1" class="rounded-top mt-4">
+                        <img src="../sunghoimg/imac.JPG" style="width: 600px" height="300px" alt="1"
+                            class="rounded-top mt-4">
 
                     </div>
 
 
-<h2>iPad Pro</h2>
-                    <div class="border bg-white rounded-bottom p-3 text-left">
-                        <small>The most advanced iPad ever.
+                    <h2>iMac</h2>
+                    <div class="border bg-white rounded-bottom p-3 text-left mb-3">
+                        <small>The vision behind iMac has never wavered: Transform the desktop experience by fitting
+                            powerful,
+                            easy-to-use technology into an elegant, all-in-one design. The new iMac takes that idea to
+                            the
+                            next level — giving you even more amazing tools to do just about anything. iMac is packed
+                            with the latest processors,
+                            faster memory, and phenomenal graphics. All coming to life on the brightest, most vibrant
+                            Retina display ever on a Mac.
+                            It’s the total package — powered up.
                         </small>
 
                     </div>
@@ -123,14 +180,18 @@
 
                 <div class=" bg-light rounded text-center">
                     <div>
-                        <img src="../sunghoimg/pad2.PNG" style="width: 100%" height="500px" alt="1" class="rounded-top mt-4">
-
+                        <img src="../sunghoimg/mac4.png" style="width: 600px" height="300px" alt="1"
+                            class="rounded-top mt-4">
                     </div>
 
-                    <h2>iPad Air</h2>
+                    <h2>Mac Pro</h2>
 
-                    <div class="border bg-white rounded-bottom p-3 text-left">
-                        <small>Incredible power at an incredible value.
+                    <div class="border bg-white rounded-bottom p-3 text-left mb-3">
+                        <small>With great power comes great capability.
+                            MacBook Pro elevates the notebook to a whole new level of performance and portability.
+                            Wherever your ideas take you, you’ll get there faster than ever with high‑performance
+                            processors and memory,
+                            advanced graphics, blazing‑fast storage, and more.
                         </small>
 
                     </div>
@@ -148,14 +209,21 @@
 
                 <div class=" bg-light rounded text-center">
                     <div>
-                        <img src="../sunghoimg/pad3.PNG" style="width: 100%" height="500px" alt="1" class="rounded-top mt-4">
+                        <img src="../sunghoimg/imac3.jpg" style="width: 500px" height="200px" alt="1"
+                            class="rounded-top mt-4">
 
                     </div>
 
-                    <h2>iPad</h2>
+                    <h2>MacBook Pro</h2>
 
-                    <div class="border bg-white rounded-bottom p-3 text-left">
-                        <small>Our most popular iPad.
+                    <div class="border bg-white rounded-bottom p-3 text-left mb-3">
+                        <small>With the latest Intel Core processors, MacBook Pro reaches new heights in compute
+                            performance.
+                            The 15‑inch model now features a ninth-generation 8-core Intel Core i9 processor that
+                            reaches Turbo Boost speeds up to 5.0GHz.
+                            This gives 3D graphics apps like Autodesk Maya up to 40 percent faster render speeds
+                            compared with the previous-generation 6-core processor
+                            and up to 2x faster render speeds than a quad-core processor.
                         </small>
 
                     </div>
@@ -166,14 +234,23 @@
 
                 <div class=" bg-light rounded text-center">
                     <div>
-                        <img src="../sunghoimg/pad4.PNG" style="width: 100%" height="500px" alt="1" class="rounded-top mt-4">
+                        <img src="../sunghoimg/imac2.jpg" style="width: 500px" height="200px" alt="1"
+                            class="rounded-top mt-4">
 
                     </div>
 
-                    <h2>iPad mini</h2>
+                    <h2>MacBook Air</h2>
 
-                    <div class="border bg-white rounded-bottom p-3 text-left">
-                        <small>Small in size. Big on capability.
+                    <div class="border bg-white rounded-bottom p-3 text-left mb-3">
+                        <small>Lightness strikes again.
+                            The most loved Mac is about to make you fall in love all over again.
+                            Available in silver, space gray, and gold, the new thinner and lighter MacBook Air features
+                            a brilliant Retina display
+                            with True Tone technology, Touch ID, the latest-generation keyboard, and a Force Touch
+                            trackpad. The iconic wedge is created from
+                            100 percent recycled aluminum, making it the greenest Mac ever.1 And with all-day battery
+                            life, MacBook Air is your perfectly portable,
+                            do-it-all notebook.
                         </small>
 
                     </div>
