--- a/Bootstrap_small_project/mac.html
+++ b/Bootstrap_small_project/mac.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <script src="https://kit.fontawesome.com/da855165bc.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -16,43 +17,49 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-between fixed-top">
-
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-between">
 
 
         <ul class="navbar-nav ">
             <li class="nav-item ">
-                <a class="nav-link" href="mac.html">Mac</a>
+                <a class="nav-link" href="/sh_main"><i class="fab fa-apple fa-2x"></i></a>
+            </li>
+
+        </ul>
+
+        <ul class="navbar-nav ">
+            <li class="nav-item ">
+                <a class="nav-link" href="/sh_mac">Mac</a>
             </li>
 
         </ul>
         <ul class="navbar-nav ">
             <li class="nav-item ">
-                <a class="nav-link" href="ipad.html">ipad</a>
+                <a class="nav-link" href="/sh_ipad">ipad</a>
             </li>
         </ul>
 
         <ul class="navbar-nav ">
             <li class="nav-item ">
-                <a class="nav-link" href="iphone.html">iPhone</a>
+                <a class="nav-link" href="/sh_iphone">iPhone</a>
             </li>
 
         </ul>
         <ul class="navbar-nav ">
             <li class="nav-item ">
-                <a class="nav-link" href="watch.html">Watch</a>
+                <a class="nav-link" href="/sh_watch">Watch</a>
             </li>
         </ul>
 
         <ul class="navbar-nav ">
             <li class="nav-item ">
-                <a class="nav-link" href="music.html">Music</a>
+                <a class="nav-link" href="/sh_music">Music</a>
             </li>
 
         </ul>
         <ul class="navbar-nav ">
             <li class="nav-item ">
-                <a class="nav-link" href="notice.html">고객지원</a>
+                <a class="nav-link" href="/sh_notice">고객지원</a>
             </li>
         </ul>
 
@@ -67,7 +74,7 @@
                                 <h4 class="modal-title">로그인</h4>
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                             </div>
-                            <form action="/login" method="GET">
+                            <form action="/login1" method="GET">
                                 <div>
                                     <div class="form-group col-lg-8  ">
                                         <label for="email">Email:</label>
@@ -91,7 +98,7 @@
                                     </div>
 
 
-                                    <button type="submit" class="btn btn-outline-secondary m-3">Submit</button>
+                                    <button type="submit" class="btn btn-outline-secondary m-3">login</button>
 
                                 </div>
 
@@ -145,14 +152,13 @@
     </div>
 
 
-    <div class="container border text-center mb-5 mt-5">
-        <h1>Mac</h1>
+    <div class="container border text-center mb-5 mt-3">
         <div class="row bg-light">
             <div class="col-lg border">
 
                 <div class=" bg-light rounded text-center">
                     <div>
-                        <img src="../sunghoimg/imac.JPG" style="width: 600px" height="300px" alt="1"
+                        <img src="./imac.JPG" style="width: 600px" height="300px"
                             class="rounded-top mt-4">
 
                     </div>
@@ -180,7 +186,7 @@
 
                 <div class=" bg-light rounded text-center">
                     <div>
-                        <img src="../sunghoimg/mac4.png" style="width: 600px" height="300px" alt="1"
+                        <img src="./mac4.png" style="width: 480px" height="300px"
                             class="rounded-top mt-4">
                     </div>
 
@@ -209,7 +215,7 @@
 
                 <div class=" bg-light rounded text-center">
                     <div>
-                        <img src="../sunghoimg/imac3.jpg" style="width: 500px" height="200px" alt="1"
+                        <img src="./imac3.jpg" style="width: 500px" height="200px"
                             class="rounded-top mt-4">
 
                     </div>
@@ -234,7 +240,7 @@
 
                 <div class=" bg-light rounded text-center">
                     <div>
-                        <img src="../sunghoimg/imac2.jpg" style="width: 500px" height="200px" alt="1"
+                        <img src="./imac2.jpg" style="width: 500px" height="200px"
                             class="rounded-top mt-4">
 
                     </div>
@@ -262,7 +268,17 @@
 
 
     </div>
-
+    <footer class="py-4 bg-dark text-white-50">
+        <div class="container text-center">
+            <small>CEO : Choi sung ho</small>
+            <div>
+                <small>Address : Korea</small>
+            </div>
+            <div>
+                <small>Business license number : 999-55-75416</small>
+            </div>
+        </div>
+    </footer>
 
 
 
