--- a/Bootstrap_small_project/main.html
+++ b/Bootstrap_small_project/main.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <script src="https://kit.fontawesome.com/da855165bc.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -18,41 +19,46 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-between ">
 
+        <ul class="navbar-nav ">
+            <li class="nav-item ">
+                <a class="nav-link" href="/sh_main"><i class="fab fa-apple fa-2x"></i></a>
+            </li>
 
+        </ul>
 
         <ul class="navbar-nav ">
             <li class="nav-item ">
-                <a class="nav-link" href="mac.html">Mac</a>
+                <a class="nav-link" href="/sh_mac">Mac</a>
             </li>
 
         </ul>
         <ul class="navbar-nav ">
             <li class="nav-item ">
-                <a class="nav-link" href="ipad.html">ipad</a>
+                <a class="nav-link" href="/sh_ipad">ipad</a>
             </li>
         </ul>
 
         <ul class="navbar-nav ">
             <li class="nav-item ">
-                <a class="nav-link" href="iphone.html">iPhone</a>
+                <a class="nav-link" href="/sh_iphone">iPhone</a>
             </li>
 
         </ul>
         <ul class="navbar-nav ">
             <li class="nav-item ">
-                <a class="nav-link" href="watch.html">Watch</a>
+                <a class="nav-link" href="/sh_watch">Watch</a>
             </li>
         </ul>
 
         <ul class="navbar-nav ">
             <li class="nav-item ">
-                <a class="nav-link" href="music.html">Music</a>
+                <a class="nav-link" href="/sh_music">Music</a>
             </li>
 
         </ul>
         <ul class="navbar-nav ">
             <li class="nav-item ">
-                <a class="nav-link" href="notice.html">고객지원</a>
+                <a class="nav-link" href="/sh_notice">고객지원</a>
             </li>
         </ul>
 
@@ -67,7 +73,7 @@
                                 <h4 class="modal-title">로그인</h4>
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                             </div>
-                            <form action="/login" method="GET">
+                            <form action="/login1" method="GET">
                                 <div>
                                     <div class="form-group col-lg-8  ">
                                         <label for="email">Email:</label>
@@ -91,7 +97,7 @@
                                     </div>
 
 
-                                    <button type="submit" class="btn btn-outline-secondary m-3">Submit</button>
+                                    <button type="submit" class="btn btn-outline-secondary m-3">login</button>
 
                                 </div>
 
@@ -151,22 +157,22 @@
         </div>
         <div class="carousel-inner ">
             <div class="carousel-item active ">
-                <img src="../sunghoimg/bg2.jpg" alt="New York" width="100%" height="600px">
+                <img src="./bg2.jpg" alt="New York" width="100%" height="600px">
 
             </div>
 
             <div class="carousel-item">
-                <img src="../sunghoimg/bg1.jpg" alt="New York" width="100%" height="600px">
+                <img src="./bg1.jpg" alt="New York" width="100%" height="600px">
 
             </div>
 
             <div class="carousel-item">
-                <img src="../sunghoimg/bg3.jpg" alt="New York" width="100%" height="600px">
+                <img src="./bg3.jpg" alt="New York" width="100%" height="600px">
 
             </div>
 
             <div class="carousel-item">
-                <img src="../sunghoimg/bg4.jpg" alt="New York" width="100%" height="600px">
+                <img src="./bg4.jpg" alt="New York" width="100%" height="600px">
 
             </div>
 
@@ -186,14 +192,11 @@
 
                 <div class=" bg-light">
                     <h2 class="mb-3">iPhone XR, 69만 원부터.*</h2>
-                    <div>
+                    <div class="mb-3">
                         <h5 class="m-0">Apple Store에서는 iPhone XR을 69만 원부터, </h5>
                         <h5 class="m-0">iPhone XS를 107만 원부터 구입할 수 있습니다.</h5>
                     </div>
 
-                    <button type="button" class="btn outline">
-                        <h5>매장찾기</h5>
-                    </button>
 
 
                 </div>
@@ -214,12 +217,9 @@
                         <h5 class="m-0">전면 화면 디자인, iPhone 사상 가장 긴 배터리 사용 시간. </h5>
                         <h5 class="m-0">놀랍도록 빠른 성능. 스튜디오급 사진 촬영 기능까지.</h5>
                     </div>
-                    <div>
-                        <button type="button" class="btn outline mt-3">
-                    </div>
-                    <h5 class="mb-4">매장찾기</h5>
+
                     </button>
-                    <img src="../sunghoimg/ipr.png" alt="123">
+                    <img src="./ipr.png">
                 </div>
 
             </div>
@@ -239,12 +239,8 @@
                         <h5 class="m-0">자랑하는 A12 Bionic. 가장 안전한 안면 인증 기술인 Face ID</h5>
                         <h5 class="m-0">심도 제어 기능을 갖춘 혁신적인 듀얼 카메라까지</h5>
                     </div>
-                    <div>
-                        <button type="button" class="btn outline mt-3">
-                    </div>
-                    <h5 class="mb-4">매장찾기</h5>
-                    </button>
-                    <img src="../sunghoimg/ips.PNG" alt="123">
+
+                    <img src="./ips.PNG">
                 </div>
 
             </div>
@@ -263,12 +259,8 @@
                         <h5 class="m-0 text-info">SERIES 4</h5>
                         <h5 class="m-0">더욱 강력하게, 더욱 컬러풀하게.</h5>
                     </div>
-                    <div>
-                        <button type="button" class="btn outline mt-3">
-                    </div>
-                    <h5 class="mb-4">매장찾기</h5>
-                    </button>
-                    <img src="../sunghoimg/iw.png" alt="123">
+                   
+                    <img src="./iw.png">
                 </div>
 
             </div>
@@ -287,7 +279,7 @@
                     <div>
                         <p class="m-0 mb-5">다시 한 번 가볍게 앞서다.</p>
                     </div>
-                    <img src="../sunghoimg/air.PNG" alt="123">
+                    <img src="./air.PNG">
                 </div>
 
             </div>
@@ -298,7 +290,7 @@
                     <div>
                         <p class="m-0 mb-5 text-white">남다른 파워, 남다른 성능, 남다른 차원의 프로.</p>
                     </div>
-                    <img src="../sunghoimg/mb.jpg" width="500px" height="300px" alt="123">
+                    <img src="./mb.jpg" width="500px" height="300px">
 
                 </div>
             </div>
@@ -314,7 +306,7 @@
                     <div>
                         <p class="m-0 mb-5">Mac의 능력, 더 높은 곳으로.</p>
                     </div>
-                    <img src="../sunghoimg/os.jpeg" width="700px" height="300px" alt="123">
+                    <img src="./os.jpeg" width="700px" height="300px">
                 </div>
 
             </div>
@@ -325,7 +317,7 @@
                     <div>
                         <p class="m-0 mb-5">새로움 한가득. 스크린 한가득. 성능 한가득.</p>
                     </div>
-                    <img src="../sunghoimg/ipad.jpg" width="700px" height="300px" alt="123">
+                    <img src="./ipad.jpg" width="700px" height="300px">
 
                 </div>
             </div>
@@ -347,9 +339,8 @@
                     <div>
                         <button type="button" class="btn outline mt-3">
                     </div>
-                    <h5 class="mb-4">매장찾기</h5>
                     </button>
-                    <img src="../sunghoimg/pod.PNG" alt="123">
+                    <img src="./pod.PNG">
                 </div>
 
             </div>
@@ -357,7 +348,17 @@
         </div>
 
     </div>
-
+    <footer class="py-4 bg-dark text-white-50 ">
+        <div class="container text-center">
+            <small>CEO : Choi sung ho</small>
+            <div>
+                <small>Address : Korea</small>
+            </div>
+            <div>
+                <small>Business license number : 999-55-75416</small>
+            </div>
+        </div>
+    </footer>
 </body>
 
 
