--- a/Bootstrap_small_project/main.html
+++ b/Bootstrap_small_project/main.html
@@ -78,13 +78,13 @@
                                     <div class="form-group col-lg-8  ">
                                         <label for="email">Email:</label>
                                         <input type="email" name="login_email" class="form-control" id="email"
-                                            placeholder="Enter emaill">
+                                            placeholder="ex)chlsh0681@gmail.com">
                                     </div>
 
                                     <div class="form-group col-lg-8 ">
                                         <label for="pwd">Password:</label>
                                         <input type="password" name="login_password" class="form-control"
-                                            placeholder="Enter password">
+                                            placeholder="password">
                                     </div>
 
                                     <div class="form-group form-inline col-lg-8">
@@ -136,6 +136,8 @@
                     </div>
                 </div>
             </li>
+
+        
 
         </ul>
 
