--- a/Bootstrap_small_project/music.html
+++ b/Bootstrap_small_project/music.html
@@ -78,13 +78,13 @@
                                     <div class="form-group col-lg-8  ">
                                         <label for="email">Email:</label>
                                         <input type="email" name="login_email" class="form-control" id="email"
-                                            placeholder="Enter emaill">
+                                            placeholder="ex)chlsh0681@gmail.com">
                                     </div>
 
                                     <div class="form-group col-lg-8 ">
                                         <label for="pwd">Password:</label>
                                         <input type="password" name="login_password" class="form-control"
-                                            placeholder="Enter password">
+                                            placeholder="password">
                                     </div>
 
                                     <div class="form-group form-inline col-lg-8">
@@ -157,7 +157,7 @@
 
                 <div class=" bg-light rounded text-center">
                     <div>
-                        <img src="./pods.PNG" style="width: 70%" height="300px"
+                        <img src="./pods.PNG" style="width: 60%" height="250px"
                             class="rounded-top mt-4">
 
                     </div>
@@ -177,7 +177,7 @@
 
                 <div class=" bg-light rounded text-center">
                     <div>
-                        <img src="./touch.PNG" style="width: 70%" height="300px"
+                        <img src="./touch.PNG" style="width: 60%" height="250px"
                             class="rounded-top mt-4">
 
                     </div>
