--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <a href ="/bj_index">Project_조범진</a>
         <a href ="./bootstrap_조범진.pdf">Project_조범진_pdf</a>
         <br>
-        <a href ="/bj_index">Project_최성호</a>
-        <a href ="./bootstrap_조범진.pdf">Project_최성호_pdf</a>
+        <a href ="/sh_main">Project_최성호</a>
+        <a href ="./bootstrap_pdf.pdf">Project_최성호_pdf</a>
     </body>
 
 </html>
