--- a/Bootstrap_small_project/notice.html
+++ b/Bootstrap_small_project/notice.html
@@ -78,13 +78,13 @@
                                     <div class="form-group col-lg-8  ">
                                         <label for="email">Email:</label>
                                         <input type="email" name="login_email" class="form-control" id="email"
-                                            placeholder="Enter emaill">
+                                            placeholder="ex)chlsh0681@gmail.com">
                                     </div>
 
                                     <div class="form-group col-lg-8 ">
                                         <label for="pwd">Password:</label>
                                         <input type="password" name="login_password" class="form-control"
-                                            placeholder="Enter password">
+                                            placeholder="password">
                                     </div>
 
                                     <div class="form-group form-inline col-lg-8">
@@ -335,7 +335,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text">제목</span>
                             </div>
-                            <input type="text" class="form-control" placeholder="Additional Info" name="text1">
+                            <input type="text" class="form-control" placeholder="title" name="text1">
 
                         </div>
 
@@ -343,7 +343,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text">내용</span>
                             </div>
-                            <input type="text" class="form-control" placeholder="Additional Info" name="text2">
+                            <input type="text" class="form-control" placeholder="text" name="text2">
 
                         </div>
 
@@ -351,7 +351,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text">날짜</span>
                             </div>
-                            <input type="text" class="form-control" placeholder="Additional Info" name="text3">
+                            <input type="text" class="form-control" placeholder="date" name="text3">
 
                         </div>
 
@@ -359,14 +359,11 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text">작성자</span>
                             </div>
-                            <input type="text" class="form-control" placeholder="Additional Info" name="text4">
+                            <input type="text" class="form-control" placeholder="writer" name="text4">
 
                         </div>
 
 
-                        <div class="modal-body">
-                            Modal body..
-                        </div>
                         <div class="modal-footer">
                             <button type="button" data-dismiss="modal">Close</button>
                         </div>
